removed mocha dep

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mocha-qtest-mapping-reporter",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Map your automated test to qTest Test Case with tag",
   "main": "index.js",
   "scripts": {
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/mgrybyk/mocha-qtest-mapping-reporter#readme",
   "dependencies": {
-    "mocha": "*",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
+  },
+  "devDependencies": {
+    "mocha": "^6.1.2"
   }
 }
