--- a/boilerplates/cypress/package.json
+++ b/boilerplates/cypress/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@mocha-qtest-mapping-reporter/cypress",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "mocha-qtest-mapping-reporter Cypress boilerplate",
   "main": "",
   "scripts": {
-    "test": "cypress run"
+    "test:suite:existing": "QTEST_SUITE_ID=1156118 cypress run",
+    "test:suite:new": "QTEST_PARENT_TYPE=test-cycle QTEST_PARENT_ID=607732 QTEST_SUITE_NAME=foobar cypress run"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,11 @@
   "homepage": "https://github.com/mgrybyk/mocha-qtest-mapping-reporter#readme",
   "dependencies": {
     "cypress": "^3.2.0",
+    "mocha-junit-reporter": "^1.21.0",
     "mocha-multi-reporters": "^1.1.7",
     "mocha-qtest-mapping-reporter": "^1.1.2"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   }
 }
